Fix workarea canvas ux on mobile

--- a/public/app/styles/ice/global.less
+++ b/public/app/styles/ice/global.less
@@ -715,10 +715,6 @@ input[readonly=readonly]:focus {
   display:none;
 }
 
-#workarea {
-  width: calc(100vw - 50px)
-}
-
 @media only screen and (max-device-width: 732px) {
 
 
