--- a/public/app/styles/ice/iframe.less
+++ b/public/app/styles/ice/iframe.less
@@ -70,7 +70,7 @@
 }
 
 #workarea {
-  width: calc(~"100vw - 50px");
+  width: 100vw;
 }
 
 @media only screen and (max-device-width: 732px) {
